@@ -63,6 +63,8 @@ $Id$
   thanks to Brian Douglass - bhdouglass
 + patch #2984058 [edit] Buttons for quicky creating common SQL queries, thanks
   to sutharshan.
++ patch #2984337 [interface] Convert loading of export/import to jQuery ready
+  event, thanks to sutharshan.
 
 3.3.3.0 (not yet released)
 - patch #2982480 [navi] Do not group if there would be one table in group,
